change ID format

--- a/schema/codegen-schema/aa/security-qa.canonical.yaml
+++ b/schema/codegen-schema/aa/security-qa.canonical.yaml
@@ -1,5 +1,5 @@
 kinds:
-    -   id: canonical://www.boundedinfinity.com/canonical/aa/security-qa
+    -   id: canonical:///aa/security-qa
         description: Account security questions
         kind: object
         properties:
