--- a/schema/codegen-schema/aa/username-password.canonical.yaml
+++ b/schema/codegen-schema/aa/username-password.canonical.yaml
@@ -1,5 +1,5 @@
 kinds: 
-    -   id: canonical://www.boundedinfinity.com/canonical/aa/username-password
+    -   id: canonical:///aa/username-password
         description: Username and password authentication information
         kind: object
         properties:
