--- a/schema/codegen-schema/address/email.canonical.yaml
+++ b/schema/codegen-schema/address/email.canonical.yaml
@@ -1,5 +1,5 @@
 kinds:
-    -   id: canonical://www.boundedinfinity.com/canonical/address/email
+    -   id: canonical:///address/email
         description: An e-mail address
         kind: object
         properties:
