--- a/schema/codegen-schema/address/internet.canonical.yaml
+++ b/schema/codegen-schema/address/internet.canonical.yaml
@@ -1,5 +1,5 @@
 kinds:
-    -   id: canonical://www.boundedinfinity.com/canonical/address/internet
+    -   id: canonical:///address/internet
         description: An internet address
         kind: object
         properties:
