--- a/schema/codegen-schema/address/mailing.canonical.yaml
+++ b/schema/codegen-schema/address/mailing.canonical.yaml
@@ -1,5 +1,5 @@
 kinds:
-    -   id: canonical://www.boundedinfinity.com/canonical/address/mailing
+    -   id: canonical:///address/mailing
         description: A US mailing address
         kind: object
         properties:
