--- a/schema/codegen-schema/bookkeeping/account.canonical.yaml
+++ b/schema/codegen-schema/bookkeeping/account.canonical.yaml
@@ -1,5 +1,5 @@
 kinds:
-    -   id: canonical://www.boundedinfinity.com/canonical/bookkeeping/account
+    -   id: canonical:///bookkeeping/account
         description: Double Entry Bookkeeping Account
         kind: object
         properties:
