--- a/schema/codegen-schema/calendar/task.canonical.yaml
+++ b/schema/codegen-schema/calendar/task.canonical.yaml
@@ -1,5 +1,5 @@
 kinds:
-    -   id: canonical://www.boundedinfinity.com/canonical/calendar/task
+    -   id: canonical:///calendar/task
         description: Calendar Task
         kind: object
         properties:
