--- a/schema/codegen-schema/people/employment.canonical.yaml
+++ b/schema/codegen-schema/people/employment.canonical.yaml
@@ -1,5 +1,5 @@
 kinds:
-    -   id: canonical://www.boundedinfinity.com/canonical/people/employment
+    -   id: canonical:///people/employment
         description: Employment
         kind: object
         properties:
