--- a/schema/codegen-schema/people/pseudonym.canonical.yaml
+++ b/schema/codegen-schema/people/pseudonym.canonical.yaml
@@ -1,5 +1,5 @@
 kinds:
-    -   id: canonical://www.boundedinfinity.com/canonical/people/pseudonym
+    -   id: canonical:///people/pseudonym
         title: A person's pseudonym
         kind: object
         properties:
