--- a/schema/codegen-schema/telephone/nanp.canonical.yaml
+++ b/schema/codegen-schema/telephone/nanp.canonical.yaml
@@ -1,5 +1,5 @@
 kinds:
-    -   id: canonical://www.boundedinfinity.com/canonical/telephone/nanp
+    -   id: canonical:///telephone/nanp
         description: A NANP telephone number plan
         kind: object
         properties:
