--- a/schema/codegen-schema/aa/ssh-key-pair.canonical.yaml
+++ b/schema/codegen-schema/aa/ssh-key-pair.canonical.yaml
@@ -1,5 +1,5 @@
 kinds:
-    -   id: canonical://www.boundedinfinity.com/canonical/aa/ssh-key-pair
+    -   id: canonical:///aa/ssh-key-pair
         description: SSH Key pair
         kind: object
         properties:
