--- a/schema/codegen-schema/banking/aba-rtn.canonical.yaml
+++ b/schema/codegen-schema/banking/aba-rtn.canonical.yaml
@@ -1,5 +1,5 @@
 kinds:
-    -   id: canonical://www.boundedinfinity.com/canonical/banking/aba-rtn
+    -   id: canonical:///banking/aba-rtn
         description: |
             <p>
                 The bank American Banking Association (ABA) routing transit number (ABA RTN)
