--- a/schema/codegen-schema/banking/bank.canonical.yaml
+++ b/schema/codegen-schema/banking/bank.canonical.yaml
@@ -1,5 +1,5 @@
 kinds:
-    -   id: canonical://www.boundedinfinity.com/canonical/banking/bank
+    -   id: canonical:///banking/bank
         description: Bank
         kind: object
         properties:
