--- a/schema/codegen-schema/banking/card-type.canonical.yaml
+++ b/schema/codegen-schema/banking/card-type.canonical.yaml
@@ -1,5 +1,5 @@
 kinds:
-    -   id: canonical://www.boundedinfinity.com/canonical/banking/card-type
+    -   id: canonical:///banking/card-type
         description: Card Type
         kind: string
         enum:
