--- a/schema/codegen-schema/banking/iban.canonical.yaml
+++ b/schema/codegen-schema/banking/iban.canonical.yaml
@@ -1,5 +1,5 @@
 kinds:
-    -   id: canonical://www.boundedinfinity.com/canonical/banking/iban
+    -   id: canonical:///banking/iban
         description: |
             <p>
                 The Business Identifier Codes (BIC) formatted number.
