--- a/schema/codegen-schema/banking/swift.canonical.yaml
+++ b/schema/codegen-schema/banking/swift.canonical.yaml
@@ -1,5 +1,5 @@
 kinds:
-    -   id: canonical://www.boundedinfinity.com/canonical/banking/swift
+    -   id: canonical:///banking/swift
         description: |
             <p>
                 The Society for Worldwide Interbank Financial Telecommunication (SWIFT) number.
