--- a/schema/codegen-schema/bookkeeping/account-type.canonical.yaml
+++ b/schema/codegen-schema/bookkeeping/account-type.canonical.yaml
@@ -1,5 +1,5 @@
 kinds:
-    -   id: canonical://www.boundedinfinity.com/canonical/bookkeeping/account-type
+    -   id: canonical:///bookkeeping/account-type
         description: Double Entry Book Keeping Account Types
         kind: string
         enum:
