--- a/schema/codegen-schema/bookkeeping/transaction-action.canonical.yaml
+++ b/schema/codegen-schema/bookkeeping/transaction-action.canonical.yaml
@@ -1,5 +1,5 @@
 kinds:
-    -   id: canonical://www.boundedinfinity.com/canonical/bookkeeping/transaction-action
+    -   id: canonical:///bookkeeping/transaction-action
         description: Double Entry Bookkeeping Transaction Debit
         kind: object
         properties:
