--- a/schema/codegen-schema/calendar/event.canonical.yaml
+++ b/schema/codegen-schema/calendar/event.canonical.yaml
@@ -1,5 +1,5 @@
 kinds:
-    -   id: canonical://www.boundedinfinity.com/canonical/calendar/event
+    -   id: canonical:///calendar/event
         description: Calendar Event
         kind: object
         properties:
