--- a/schema/codegen-schema/corporation/company.canonical.yaml
+++ b/schema/codegen-schema/corporation/company.canonical.yaml
@@ -1,5 +1,5 @@
 kinds:
-    -   id: canonical://www.boundedinfinity.com/canonical/corporation/company
+    -   id: canonical:///corporation/company
         description: A company record
         kind: object
         properties:
