--- a/schema/codegen-schema/corporation/llc.canonical.yaml
+++ b/schema/codegen-schema/corporation/llc.canonical.yaml
@@ -1,5 +1,5 @@
 kinds:
-    -   id: canonical://www.boundedinfinity.com/canonical/corporation/llc
+    -   id: canonical:///corporation/llc
         description: Limited Liability Company
         kind: object
         properties:
