--- a/schema/codegen-schema/currency/usd.canonical.yaml
+++ b/schema/codegen-schema/currency/usd.canonical.yaml
@@ -1,5 +1,5 @@
 kinds:
-    -   id: canonical://www.boundedinfinity.com/canonical/currency/usd
+    -   id: canonical:///currency/usd
         description: US dollar
         kind: number
         minimum: 0
