--- a/schema/codegen-schema/data/acro.canonical.yaml
+++ b/schema/codegen-schema/data/acro.canonical.yaml
@@ -1,5 +1,5 @@
 kinds:
-    -   id: canonical://www.boundedinfinity.com/canonical/data/acro
+    -   id: canonical:///data/acro
         description: An acroymn definition
         kind: object
         properties:
