--- a/schema/codegen-schema/film/actor.canonical.yaml
+++ b/schema/codegen-schema/film/actor.canonical.yaml
@@ -1,5 +1,5 @@
 kinds:
-    -   id: canonical://www.boundedinfinity.com/canonical/film/actor
+    -   id: canonical:///film/actor
         description: An actor record
         kind: object
         properties:
