--- a/schema/codegen-schema/film/episode.canonical.yaml
+++ b/schema/codegen-schema/film/episode.canonical.yaml
@@ -1,5 +1,5 @@
 kinds:
-    -   id: canonical://www.boundedinfinity.com/canonical/film/episode
+    -   id: canonical:///film/episode
         description: A television series episode record
         kind: object
         properties:
