--- a/schema/codegen-schema/film/series.canonical.yaml
+++ b/schema/codegen-schema/film/series.canonical.yaml
@@ -1,5 +1,5 @@
 kinds:
-    -   id: canonical://www.boundedinfinity.com/canonical/film/series
+    -   id: canonical:///film/series
         description: A television series record
         kind: object
         properties:
