--- a/schema/codegen-schema/government/us-social-security-number-areas.canonical.yaml
+++ b/schema/codegen-schema/government/us-social-security-number-areas.canonical.yaml
@@ -1,5 +1,5 @@
 kinds:
-    -   id: canonical://www.boundedinfinity.com/canonical/government/us-social-security-number-area
+    -   id: canonical:///government/us-social-security-number-area
         description: Social Security Number
         kind: object
         properties:
