--- a/schema/codegen-schema/government/us-social-security-number.canonical.yaml
+++ b/schema/codegen-schema/government/us-social-security-number.canonical.yaml
@@ -1,5 +1,5 @@
 kinds:
-    -   id: canonical://www.boundedinfinity.com/canonical/government/us-social-security-number
+    -   id: canonical:///government/us-social-security-number
         description: Social Security Number
         kind: object
         properties:
