--- a/schema/codegen-schema/hardware/hard-drive.canonical.yaml
+++ b/schema/codegen-schema/hardware/hard-drive.canonical.yaml
@@ -1,5 +1,5 @@
 kinds:
-    -   id: canonical://www.boundedinfinity.com/canonical/hardware/hard-drive
+    -   id: canonical:///hardware/hard-drive
         description: The hard drive specification
         kind: object
         properties:
