--- a/schema/codegen-schema/people/contact.canonical.yaml
+++ b/schema/codegen-schema/people/contact.canonical.yaml
@@ -1,5 +1,5 @@
 kinds:
-    -   id: canonical://www.boundedinfinity.com/canonical/people/contact
+    -   id: canonical:///people/contact
         description: A contact record
         kind: object
         properties:
