--- a/schema/codegen-schema/physical-inventory/vendor.canonical.yaml
+++ b/schema/codegen-schema/physical-inventory/vendor.canonical.yaml
@@ -1,5 +1,5 @@
 kinds:
-    -   id: canonical://www.boundedinfinity.com/canonical/physical-inventory/item
+    -   id: canonical:///physical-inventory/item
         description: A vendor
         kind: object
         properties:
