--- a/schema/codegen-schema/time/datetime.canonical.yaml
+++ b/schema/codegen-schema/time/datetime.canonical.yaml
@@ -1,5 +1,5 @@
 kinds:
-    -   id: canonical://www.boundedinfinity.com/canonical/time/datetime
+    -   id: canonical:///time/datetime
         description: Timestamp
         kind: string
         format: date-time
