--- a/schema/codegen-schema/time/duration.canonical.yaml
+++ b/schema/codegen-schema/time/duration.canonical.yaml
@@ -1,5 +1,5 @@
 kinds:
-    -   id: canonical://www.boundedinfinity.com/canonical/time/duration
+    -   id: canonical:///time/duration
         description: Duration
         kind: string
         format: duration
