--- a/schema/codegen-schema/util/bookmark.canonical.yaml
+++ b/schema/codegen-schema/util/bookmark.canonical.yaml
@@ -1,5 +1,5 @@
 kinds:
-    -   id: canonical://www.boundedinfinity.com/canonical/util/bookmark
+    -   id: canonical:///util/bookmark
         description: A Bookmark
         kind: object
         properties:
