--- a/schema/codegen-schema/util/geographical-location.canonical.yaml
+++ b/schema/codegen-schema/util/geographical-location.canonical.yaml
@@ -1,5 +1,5 @@
 kinds:
-    -   id: canonical://www.boundedinfinity.com/canonical/util/geographical-location
+    -   id: canonical:///util/geographical-location
         description: A Geographical location
         kind: object
         properties:
