--- a/schema/codegen-schema/util/notes.canonical.yaml
+++ b/schema/codegen-schema/util/notes.canonical.yaml
@@ -1,5 +1,5 @@
 kinds:
-    -   id: canonical://www.boundedinfinity.com/canonical/util/notes
+    -   id: canonical:///util/notes
         description: A list of notes
         kind: array
         items:
