--- a/schema/codegen-schema/cms/mime-type.canonical.yaml
+++ b/schema/codegen-schema/cms/mime-type.canonical.yaml
@@ -29,31 +29,31 @@ kinds:
                 max: 200
                 required: false
 data:
-    -   ref: https://www.boundedinfinity.com/canonical/cms/mime-type
+    -   ref: canonical://cms/mime-type
         description: Andrew Toolkit
         type: application/andrew-inset
         alternatives: []
-    -   ref: https://www.boundedinfinity.com/canonical/cms/mime-type
+    -   ref: canonical://cms/mime-type
         description: Atom Syndication Format
         type: application/atom+xml
         alternatives: []
-    -   ref: https://www.boundedinfinity.com/canonical/cms/mime-type
+    -   ref: canonical://cms/mime-type
         description: Atom Publishing Protocol
         type: application/atomcat+xml
         alternatives: []
-    -   ref: https://www.boundedinfinity.com/canonical/cms/mime-type
+    -   ref: canonical://cms/mime-type
         description: Atom Publishing Protocol Service Document
         type: application/atomsvc+xml
         alternatives: []
-    -   ref: https://www.boundedinfinity.com/canonical/cms/mime-type
+    -   ref: canonical://cms/mime-type
         description: Voice Browser Call Control
         type: application/ccxml+xml
         alternatives: []
-    -   ref: https://www.boundedinfinity.com/canonical/cms/mime-type
+    -   ref: canonical://cms/mime-type
         description: Cloud Data Management Interface (CDMI) - Capability
         type: application/cdmi-capability
         alternatives: []
-    -   ref: https://www.boundedinfinity.com/canonical/cms/mime-type
+    -   ref: canonical://cms/mime-type
         description: Cloud Data Management Interface (CDMI) - Contaimer
         type: application/cdmi-container
         alternatives: []
