--- a/schema/codegen-schema/people/pseudonym-type.canonical.yaml
+++ b/schema/codegen-schema/people/pseudonym-type.canonical.yaml
@@ -47,18 +47,18 @@ data:
     -   id: canonical:people/pseudonym-type/nom-de-plume
         title: Nom de plume
         kind: ref
-        ref: https://www.boundedinfinity.com/canonical/people/pseudonym-type/pen-name
+        ref: canonical://people/pseudonym-type/pen-name
     -   id: canonical:people/pseudonym-type/regnal-name
         title: Regnal name
         description: A person's regnal name
     -   id: canonical:people/pseudonym-type/regnant-name
         title: Regnant name
         kind: ref
-        ref: https://www.boundedinfinity.com/canonical/people/pseudonym-type/regnal-name
+        ref: canonical://people/pseudonym-type/regnal-name
     -   id: canonical:people/pseudonym-type/reign-name
         title: Reign name
         kind: ref
-        ref: https://www.boundedinfinity.com/canonical/people/pseudonym-type/reign-name
+        ref: canonical://people/pseudonym-type/reign-name
     -   id: canonical:people/pseudonym-type/online-name
         title: Online name
         description: A person's online name
