--- a/schema/codegen-schema/util/error.canonical.yaml
+++ b/schema/codegen-schema/util/error.canonical.yaml
@@ -18,4 +18,4 @@ kinds:
         type: array
         items: 
             type: ref
-            ref: https://www.boundedinfinity.com/canonical/util/error
+            ref: canonical://util/error
