--- a/schema/codegen-schema/id/uri.canonical.yaml
+++ b/schema/codegen-schema/id/uri.canonical.yaml
@@ -1,13 +1,22 @@
 kinds:
-    -   id: canonical:util/url
-        name: URL
+    -   id: canonical:id/url
+        name: Uniform Resource Locator
         type: string
         min: 1
         max: 100
         regex: ^(https?://)?([^\s/?\.#-]+\.?)+(\/[^\s]*)?$
-    -   id: canonical:util/uri
-        name: URI
+
+    -   id: canonical:id/urn
+        name: Uniform Resource Name
         type: string
         min: 1
         max: 100
-        regex: ^(?:([A-Za-z]+):)?(\/{0,3})([0-9.\-A-Za-z]+)(?::(\d+))?(?:\/([^?#]*))?(?:\?([^#]*))?(?:#(.*))?$
+
+    -   id: canonical:id/uri
+        name: Uniform Resource Identifier
+        type: union
+        one-of:
+            -   kind: ref
+                ref: id/url
+            -   kind: ref
+                ref: id/urn
